[metadata]
name = django_huey_dump_db
version = 0.0.3
description = Dump a copy of the current database in the current file
long_description = file: README.rst
url = 
author = Tweave.Tech
author_email = team@tweave.tech
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 4.0
    huey >= 2.4
